@@ -3,6 +3,8 @@ Version 1.5
 
 * Fixed original issue with classic switch off trigger wrongly activating some trigger actions.
 
+Lua API changes:
+* Added Inventory.GetChosenItem(), Inventory.SetChosenItem() and Inventory.ClearChosenItem() functions.
 
 Version 1.4
 ===========
